[workspace]
resolver = "3"
members = ["crates/*"]

# https://bevy.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[workspace.package]
version = "0.0.1"
edition = "2024"
publish = false
repository = "https://github.com/runeengine/rune"
