[package]
name = "rune_remote"
version.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "main", default-features = false, features = ["bevy_remote"] }
rune_remote_brp = { path = "../rune_remote_brp" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
