[package]
name = "rune_remote_brp"
version.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
bevy_remote = { git = "https://github.com/bevyengine/bevy.git", branch = "main", package = "bevy_remote", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
